# ray-tracing-in-one-weekend

./: .editorconfig  .gitignore  Cargo.toml  README.md  flake.nix
src/: aabb.rs  camera.rs  hit.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs  vec3.rs  world.rs
src/camera/: camera_builder.rs  mod.rs
src/hit/: aabb.rs  bvh.rs  constant.rs  hit_record.rs  mod.rs  rotation.rs  translation.rs
src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/object/: block.rs  bvh.rs  mod.rs  rectangle.rs  sphere.rs  world.rs
src/texture/: image.rs  mod.rs  noise.rs  perlin.rs
src/vec3/: color.rs  mod.rs  point3.rs
