[package]
name = "rtweekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
indicatif = { version = "0.17.2", features = ["rayon"] }
num = "0.4.0"
paste = "1.0.9"
rand = "0.8.5"
rayon = { version = "1.6.0", optional = true }

[features]
default = ["rayon"]
