[package]
name = "rtweekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexi_logger = "0.24.1"
image = "0.24.5"
indicatif = { version = "0.17.2", features = ["rayon"] }
log = "0.4.17"
num = "0.4.0"
rand = "0.8.5"
rayon = { version = "1.6.0", optional = true }

[features]
default = ["rayon"]
